Update COVID-19 cases for germany

--- a/docs/assets/data/SARS-CoV-2/Germany/measures.json
+++ b/docs/assets/data/SARS-CoV-2/Germany/measures.json
@@ -3,19 +3,19 @@
         {
             "startDate": "2020-03-09",
             "endDate": "",
-            "type": "administrative",
+            "type": "non-pharmaceutical",
             "description": "Ban of events beyond 1000 participants"
         },
         {
             "startDate": "2020-03-16",
             "endDate": "",
-            "type": "administrative",
+            "type": "non-pharmaceutical",
             "description": "Closing schools, daycare, etc."
         },
         {
             "startDate": "2020-03-23",
             "endDate": "",
-            "type": "administrative",
+            "type": "non-pharmaceutical",
             "description": "Limited Lockdown, limiting non-essential economy to home office"
         }
     ]
