--- a/docs/assets/data/SARS-CoV-2/Germany/measures.json
+++ b/docs/assets/data/SARS-CoV-2/Germany/measures.json
@@ -8,15 +8,21 @@
         },
         {
             "startDate": "2020-03-16",
-            "endDate": "",
+            "endDate": "2020-06-08",
             "type": "non-pharmaceutical",
             "description": "Closing schools, daycare, etc."
         },
         {
             "startDate": "2020-03-23",
-            "endDate": "",
+            "endDate": "2020-06-01",
             "type": "non-pharmaceutical",
             "description": "Limited Lockdown, limiting non-essential economy to home office"
+        },
+        {
+            "startDate": "2020-04-29",
+            "endDate": "",
+            "type": "non-pharmaceutical",
+            "description": "Mandatory us of face masks in public transport and at retail"
         }
     ]
 }
