--- a/docs/assets/data/SARS-CoV-2/germany/measures.json
+++ b/docs/assets/data/SARS-CoV-2/germany/measures.json
@@ -22,7 +22,7 @@
             "startDate": "2020-04-29",
             "endDate": "",
             "type": "non-pharmaceutical",
-            "description": "Mandatory us of face masks in public transport and at retail"
+            "description": "Mandatory use of face masks in public transport and at retail"
         }
     ]
 }
