--- a/docs/assets/data/SARS-CoV-2/germany/measures.json
+++ b/docs/assets/data/SARS-CoV-2/germany/measures.json
@@ -16,7 +16,7 @@
             "startDate": "2020-03-23",
             "endDate": "2020-06-01",
             "type": "non-pharmaceutical",
-            "description": "Limited Lockdown, limiting non-essential economy to home office"
+            "description": "Limited Lockdown, contact ban, limiting non-essential economy to home office"
         },
         {
             "startDate": "2020-04-29",
