Update COVID-19 measures Germany

--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -22,14 +22,16 @@
             "startDate": [
                 "2020-04-29",
                 "2020-08-10",
-                "2020-10-03"
+                "2020-10-03",
+                "2020-10-26"
             ],
             "endDate": "",
             "type": "non-pharmaceutical",
             "description": [
                 "Obligatory use of face masks in public transport and retail",
                 "&#65291; Obligatory use of face masks in schools (except during lessons)",
-                "&#65291; Obligatory use of face masks in administrative buildings (except at desk)"
+                "&#65291; Obligatory use of face masks in administrative buildings (except at desk)",
+                "&#65291; Obligatory use of face masks in secondary schools even during lessons"
             ]
         },
         {
