Update COVID-19 measures Germany

--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -30,7 +30,7 @@
             "description": [
                 "Obligatory use of face masks in public transport and retail",
                 "&#65291; Obligatory use of face masks in schools (except during lessons)",
-                "&#65291; Obligatory use of face masks in administrative buildings (except at desk)",
+                "&#65291; Obligatory use of face masks in offices and administrative buildings (except at desk)",
                 "&#65291; Obligatory use of face masks in secondary schools even during lessons"
             ]
         },
