Update  SARS-CoV-2 measures Germany

--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -37,16 +37,19 @@
         {
             "startDate": [
                 "2020-06-13",
-                "2020-11-02"
+                "2020-11-02",
+                "2020-12-16"
             ],
             "endDate": [
                 "2020-06-20",
+                "2020-12-15",
                 ""
             ],
             "type": "non-pharmaceutical",
             "description": [
                 "Conducting PCR tests in meat-processing facilities",
-                "Limited lockdown, closing restaurants and non-essential businesses with customer interaction"
+                "Limited lockdown, closing restaurants and non-essential businesses with customer interaction",
+                "Limited lockdown, contact ban, limiting non-essential economy to home office"
             ]
         }
     ]
