Update COVID-19 measures for Germany

--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -51,6 +51,12 @@
                 "Limited lockdown, closing restaurants and non-essential businesses with customer interaction",
                 "Limited lockdown, contact ban, limiting non-essential economy to home office"
             ]
+        },
+        {
+            "startDate": "2020-12-27",
+            "endDate": "",
+            "type": "pharmaceutical",
+            "description": "Vaccination"
         }
     ]
 }
