--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -38,18 +38,20 @@
             "startDate": [
                 "2020-06-13",
                 "2020-11-02",
-                "2020-12-16"
+                "2020-12-16",
+                "2021-03-01"
             ],
             "endDate": [
                 "2020-06-20",
                 "2020-12-15",
-                ""
+                "2021-02-28"
             ],
             "type": "non-pharmaceutical",
             "description": [
                 "Conducting PCR tests in meat-processing facilities",
                 "Limited lockdown, closing restaurants and non-essential businesses with customer interaction",
-                "Limited lockdown, contact ban, limiting non-essential economy to home office"
+                "Limited lockdown, contact ban, limiting non-essential economy to home office",
+                "Partially lifted lockdown restrictions, re-opening non-essential businesses with customer interaction"
             ]
         },
         {
