Update COVID-19 measures for Germany

--- a/docs/assets/data/SARS-CoV-2/de/measures.json
+++ b/docs/assets/data/SARS-CoV-2/de/measures.json
@@ -39,19 +39,22 @@
                 "2020-06-13",
                 "2020-11-02",
                 "2020-12-16",
-                "2021-03-01"
+                "2021-03-01",
+                "2021-04-23"
             ],
             "endDate": [
                 "2020-06-20",
                 "2020-12-15",
-                "2021-02-28"
+                "2021-02-28",
+                "2021-04-22"
             ],
             "type": "non-pharmaceutical",
             "description": [
                 "Conducting PCR tests in meat-processing facilities",
                 "Limited lockdown, closing restaurants and non-essential businesses with customer interaction",
                 "Limited lockdown, contact ban, limiting non-essential economy to home office",
-                "Partially lifted lockdown restrictions, re-opening non-essential businesses with customer interaction"
+                "Partially lifted lockdown restrictions, re-opening non-essential businesses with customer interaction",
+                "Limited lockdown, contact ban, curfew at night, stepwise applying/lifting of restrictions based on 7-day incidence"
             ]
         },
         {
